--- a/code-postprocessing/latex-templates/templateBIOBJarticle.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJarticle.tex
@@ -34,21 +34,19 @@
 \pdfpageheight=11in
 \special{papersize=8.5in,11in}
 
-    \renewcommand{\topfraction}{1}	% max fraction of floats at top
-    \renewcommand{\bottomfraction}{1} % max fraction of floats at bottom
-    %   Parameters for TEXT pages (not float pages):
-    \setcounter{topnumber}{3}
-    \setcounter{bottomnumber}{3}
-    \setcounter{totalnumber}{3}     % 2 may work better
-    \setcounter{dbltopnumber}{4}    % for 2-column pages
-    \renewcommand{\dbltopfraction}{1}	% fit big float above 2-col. text
-    \renewcommand{\textfraction}{0.0}	% allow minimal text w. figs
-    %   Parameters for FLOAT pages (not text pages):
-    \renewcommand{\floatpagefraction}{0.80}	% require fuller float pages
-	% N.B.: floatpagefraction MUST be less than topfraction !!
-    \renewcommand{\dblfloatpagefraction}{0.7}	% require fuller float pages
-
-%%%%%%%%%%%%%%%%%%%%%%   END OF PREAMBLE   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\renewcommand{\topfraction}{1}	% max fraction of floats at top
+\renewcommand{\bottomfraction}{1} % max fraction of floats at bottom
+% Parameters for TEXT pages (not float pages):
+\setcounter{topnumber}{3}
+\setcounter{bottomnumber}{3}
+\setcounter{totalnumber}{3}     % 2 may work better
+\setcounter{dbltopnumber}{4}    % for 2-column pages
+\renewcommand{\dbltopfraction}{1}	% fit big float above 2-col. text
+\renewcommand{\textfraction}{0.0}	% allow minimal text w. figs
+% Parameters for FLOAT pages (not text pages):
+\renewcommand{\floatpagefraction}{0.80}	% require fuller float pages
+% N.B.: floatpagefraction MUST be less than topfraction !!
+\renewcommand{\dblfloatpagefraction}{0.7}	% require fuller float pages
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%% TO BE EDITED %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -56,11 +54,13 @@
 % rungeneric.py writes data into a subfolder of ppdata
 \newcommand{\bbobdatapath}{ppdata/} % default output folder of rungeneric.py
 \input{\bbobdatapath bbob_pproc_commands.tex} % provide default of algname and algfolder
-% \renewcommand{\algname}{MYNAME}  % name of algorithm as it should appear in the text
-% \renewcommand{\algfolder}{ABC/} % subfolder of \bbobdatapath for processed algorithm
+% \renewcommand{\algname}{MY-ALGORITHM-NAME}  % name of algorithm as it should appear in the text
+% \renewcommand{\algfolder}{FOLDER/} % subfolder of \bbobdatapath for processed algorithm
+% Find all \change commands in the text below and update the information according to your data
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%Tea: Why are there no page numbers? Are they forbidden? I think it would be good to have them...
+
 \graphicspath{{\bbobdatapath\algfolder}}
 
 \newcommand{\DIM}{\ensuremath{\mathrm{DIM}}}
@@ -70,11 +70,15 @@
 \newcommand{\Dfb}{\ensuremath{\Delta f_{\mathrm{best}}}}
 \newcommand{\Df}{\ensuremath{\Delta f}}
 \newcommand{\nbFEs}{\ensuremath{\mathrm{\#FEs}}}
-\newcommand{\fopt}{\ensuremath{f_\mathrm{opt}}}
+\newcommand{\hvref}{\ensuremath{HV_\mathrm{ref}}}
+\newcommand{\fopt}{\hvref}
+%\newcommand{\fopt}{\ensuremath{f_\mathrm{opt}}}
 \newcommand{\ftarget}{\ensuremath{f_\mathrm{t}}}
 \newcommand{\CrE}{\ensuremath{\mathrm{CrE}}}
 \newcommand{\change}[1]{{\color{red} #1}}
 \newcommand{\TODO}[1]{{\color{orange} !!! #1 !!!}}
+
+%%%%%%%%%%%%%%%%%%%%%%   END OF PREAMBLE   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
 %
@@ -91,7 +95,9 @@
 }
 \subtitle{Draft version
 \titlenote{Submission deadline: April 3rd.}}
-%Camera-ready paper due May 4th.}}
+% Camera-ready paper due by May 4th.
+
+%Tea: What about the deadline extension?
 
 %
 % You need the command \numberofauthors to handle the 'placement
@@ -213,8 +219,10 @@ unconstrained optimization]
 \section{CPU Timing}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % note that the following text is just a proposal and can/should be changed to your needs:
-In order to evaluate the CPU timing of the algorithm, we have run the \change{MY-ALGORITHM-NAME} with restarts on the entire bbob-biobj test suite for $2\cdot D$ function evaluations. The \change{C/Java/Matlab/Octave/Python} code was run on a \change{Mac Intel(R) Core(TM) i5-2400S CPU @ 2.50GHz} with \change{1} processor and \change{4} cores. The time per function evaluation for dimensions 2, 3, 5, 10, 20\change{, 40} equals \change{$x.x$}, \change{$x.x$}, \change{$x.x$}, \change{$xx$}, \change{$xxx$}\change{, and $xxx$} milliseconds respectively. 
+In order to evaluate the CPU timing of the algorithm, we have run the \change{\algname} with restarts on the entire bbob-biobj test suite for $2 D$ function evaluations. The \change{C/Java/Matlab/Octave/Python} code was run on a \change{Mac Intel(R) Core(TM) i5-2400S CPU @ 2.50GHz} with \change{1} processor and \change{4} cores. The time per function evaluation for dimensions 2, 3, 5, 10, 20\change{, 40} equals \change{$x.x$}, \change{$x.x$}, \change{$x.x$}, \change{$xx$}, \change{$xxx$}\change{, and $xxx$} milliseconds respectively. 
 
+%Tea: We should either change the output of timing of the example experiment from seconds to milliseconds
+%Tea: or have seconds instead of milliseconds here (the latter one is easier). 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Results}
@@ -224,7 +232,6 @@ Results of \algname\ from experiments according to \cite{biobj2016exp} on the be
 functions given in \cite{biobj2016func} are presented in
 Figures~\ref{fig:ECDFsingleOne}, \ref{fig:ECDFsingleTwo}, \ref{fig:ECDFsingleThree}, and \ref{fig:ECDFsGroups}, and in
 Table~\ref{tab:aRTs}.
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -253,9 +260,19 @@ Table~\ref{tab:aRTs}.
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f016}\\[-1.8ex]
 \end{tabular}
  \caption{\label{fig:ECDFsingleOne}
- %\bbobppfigdimlegend{$f_1$ and $f_{16}$}
-\bbobecdfcaptionsinglefcts{}
- }
+ \bbobecdfcaptionsinglefcts{}
+}
+
+%Tea: I have a problem with these captions, or rather, with the fact that the first one is different 
+%Tea: than the others (the first mentions bootstrapping and the others not, the others mention 
+%Tea: "of the restarted algorithm", which is I believe redundant here, and the first not). To me it 
+%Tea: would make much more sense to write either the same thing everywhere or have more text in the
+%Tea: first caption, but then not introduce any previously unmentioned thing in the other captions. 
+%Tea: Also, depending on what will be the final caption, the set of target precisions should be split 
+%Tea: so that the text is not so stretched (see Figs. 1 & 4). 
+%Tea: Additionally, instead of "for 33 targets in" the text should say "for 33 targets with target 
+%Tea: precision in"
+
 \end{figure*}
 \begin{figure*}
 \centering
@@ -315,13 +332,11 @@ Table~\ref{tab:aRTs}.
  }
 \end{figure*}
 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  
-% Table showing the expected running time (aRT in number of function
-% evaluations) divided by the best aRT measured during BBOB-2009 (given in the
-% first row of each cell) for functions $f_1$--$f_{24}$.
+% Table showing the average running time (aRT in number of function
+% evaluations) to reach the given targets for functions $f_1$--$f_{55}$.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -334,13 +349,17 @@ Table~\ref{tab:aRTs}.
    {\small 20-D}\\
    \input{\bbobdatapath\algfolder pptable_20D_noiselessall}}}%
 \caption[Table of aRTs]{\label{tab:aRTs}\bbobpptablecaption{} 
+%Tea: I would reformulate the caption as follows: 
+%Tea: Average running time (\aRT) to reach the given targets measured in number of 
+%Tea: $f$-evaluations. For each function, the \aRT and in braces, as dispersion measure, the half 
+%Tea: difference between 90\%- and 10\%-tile of bootstrapped run lengths are shown for the 
+%Tea: different target values ($\fopt + \Df$). \#succ is the number of trials that reached 
+%Tea: the final target ($\fopt +10^{-5}$). If the final target was never reached, the median 
+%Tea: number of conducted $f$-evaluations is additionally given in \textit{italics}. 
 }
 \end{table*}
 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+%Tea: Shouldn't the table be placed after Fig. 4?
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -382,19 +401,15 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
  }
 \end{figure*}
 
-
-
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%
+% REFERENCES
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % The following two commands are all you need in the
 % initial runs of your .tex file to
 % produce the bibliography for the citations in your paper.
 \bibliographystyle{abbrv}
 \bibliography{bbob}  % bbob.bib is the name of the Bibliography in this case
-% You must have a proper ".bib" file
-%  and remember to run:
+% You must have a proper ".bib" file and remember to run:
 % latex bibtex latex latex
 % to resolve all references
 % to create the ~.bbl file.  Insert that ~.bbl file into
@@ -403,19 +418,12 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 %
 % ACM needs 'a single self-contained file'!
 %
-
 \clearpage % otherwise the last figure might be missing
 
-
-
-%
 % Please uncomment for final version to fit paper to 8 pages.
-%
 %\end{document}
 
 \appendix
-
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -458,8 +466,22 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \vspace{-3ex}
  \caption{\label{fig:aRTgraphs}
  \bbobppfigdimlegend{$f_1$ and $f_{30}$}
- }
+%Tea: I would reformulate the caption as follows: 
+%Tea: Scaling of average running time (\aRT, measured with number of $f$-evaluations) 
+%Tea: with dimension: \aRT to reach the target (lines); median number of $f$-evaluations 
+%Tea: to reach the final target that was reached at least once but not always (+); maximum 
+%Tea: number of $f$-evaluations in any trial ({\color{red}$\times$}); interquartile 
+%Tea: range with median of simulated run-lengths to reach the target  (notched boxes).  
+%Tea: All values are divided by dimension and plotted in log-scale. Colors 
+%Tea: represent different targets $\fopt + \Df$, where $\Df = 10^{\{-1, -2, -3, -4, -5\}}$.  
+%Tea: Numbers above \aRT-symbols (if appearing) indicate the number of trials
+%Tea: reaching the respective target. Horizontal lines mean linear scaling, slanted
+%Tea: grid lines depict quadratic scaling.  
+}
 \end{figure*}
+
+%Tea: On paper, the red crosses can hardly be seen.
+
 \begin{figure*}
 \begin{tabular}{@{\hspace*{-0.018\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}}
 \includegraphics[width=0.223\textwidth]{ppfigdim_f031}&
@@ -490,10 +512,8 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \end{tabular}
 \vspace{-3ex}
  \caption{\label{fig:aRTgraphsTwo}
- aRT vs.\ dimension as in Fig.~\ref{fig:aRTgraphs} but for $f_{31}$ till $f_{55}$.
+ \aRT vs.\ dimension as in Fig.~\ref{fig:aRTgraphs} but for $f_{31}$ till $f_{55}$.
  }
 \end{figure*}
-
-
 
 \end{document}
