--- a/code-postprocessing/latex-templates/templateBIOBJarticle.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJarticle.tex
@@ -78,6 +78,9 @@
 \newcommand{\change}[1]{{\color{red} #1}}
 \newcommand{\TODO}[1]{{\color{orange} !!! #1 !!!}}
 
+% To suppress warnings about PDF page groups:
+\pdfsuppresswarningpagegroup=1
+
 %%%%%%%%%%%%%%%%%%%%%%   END OF PREAMBLE   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
