--- a/code-postprocessing/latex-templates/templateBIOBJarticle.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJarticle.tex
@@ -59,8 +59,6 @@
 % Find all \change commands in the text below and update the information according to your data
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%Tea: Why are there no page numbers? Are they forbidden? I think it would be good to have them...
-
 \graphicspath{{\bbobdatapath\algfolder}}
 
 \newcommand{\DIM}{\ensuremath{\mathrm{DIM}}}
@@ -79,7 +77,7 @@
 \newcommand{\TODO}[1]{{\color{orange} !!! #1 !!!}}
 
 % To suppress warnings about PDF page groups:
-\pdfsuppresswarningpagegroup=1
+%\pdfsuppresswarningpagegroup=1     % Dimo: gives errors on my machine
 
 %%%%%%%%%%%%%%%%%%%%%%   END OF PREAMBLE   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -99,8 +97,6 @@
 \subtitle{Draft version
 \titlenote{Submission deadline: April 3rd.}}
 % Camera-ready paper due by May 4th.
-
-%Tea: What about the deadline extension?
 
 %
 % You need the command \numberofauthors to handle the 'placement
@@ -222,10 +218,8 @@ unconstrained optimization]
 \section{CPU Timing}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % note that the following text is just a proposal and can/should be changed to your needs:
-In order to evaluate the CPU timing of the algorithm, we have run the \change{\algname} with restarts on the entire bbob-biobj test suite for $2 D$ function evaluations. The \change{C/Java/Matlab/Octave/Python} code was run on a \change{Mac Intel(R) Core(TM) i5-2400S CPU @ 2.50GHz} with \change{1} processor and \change{4} cores. The time per function evaluation for dimensions 2, 3, 5, 10, 20\change{, 40} equals \change{$x.x$}, \change{$x.x$}, \change{$x.x$}, \change{$xx$}, \change{$xxx$}\change{, and $xxx$} milliseconds respectively. 
+In order to evaluate the CPU timing of the algorithm, we have run the \change{\algname} with restarts on the entire bbob-biobj test suite for $2 D$ function evaluations. The \change{C/Java/Matlab/Octave/Python} code was run on a \change{Mac Intel(R) Core(TM) i5-2400S CPU @ 2.50GHz} with \change{1} processor and \change{4} cores. The time per function evaluation for dimensions 2, 3, 5, 10, 20\change{, 40} equals \change{$x.x$}, \change{$x.x$}, \change{$x.x$}, \change{$xx$}, \change{$xxx$}\change{, and $xxx$} seconds respectively. 
 
-%Tea: We should either change the output of timing of the example experiment from seconds to milliseconds
-%Tea: or have seconds instead of milliseconds here (the latter one is easier). 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Results}
@@ -266,16 +260,6 @@ Table~\ref{tab:aRTs}.
  \bbobecdfcaptionsinglefcts{}
 }
 
-%Tea: I have a problem with these captions, or rather, with the fact that the first one is different 
-%Tea: than the others (the first mentions bootstrapping and the others not, the others mention 
-%Tea: "of the restarted algorithm", which is I believe redundant here, and the first not). To me it 
-%Tea: would make much more sense to write either the same thing everywhere or have more text in the
-%Tea: first caption, but then not introduce any previously unmentioned thing in the other captions. 
-%Tea: Also, depending on what will be the final caption, the set of target precisions should be split 
-%Tea: so that the text is not so stretched (see Figs. 1 & 4). 
-%Tea: Additionally, instead of "for 33 targets in" the text should say "for 33 targets with target 
-%Tea: precision in"
-
 \end{figure*}
 \begin{figure*}
 \centering
@@ -302,7 +286,7 @@ Table~\ref{tab:aRTs}.
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f036}\\[-1.8ex]
 \end{tabular}
  \caption{\label{fig:ECDFsingleTwo}
- Empirical cumulative distribution function (ECDF) of the restarted algorithm per dimension for all targets of each function as in Fig.~\ref{fig:ECDFsingleOne} but for $f_{17}$ till $f_{36}$.
+ Empirical cumulative distribution function (ECDF) per dimension for all targets of each function as in Fig.~\ref{fig:ECDFsingleOne} but for $f_{17}$ till $f_{36}$.
  }
 \end{figure*}
 \begin{figure*}
@@ -331,38 +315,11 @@ Table~\ref{tab:aRTs}.
 \includegraphics[width=0.25\textwidth]{pprldmany-single-functions/pprldmany_f055}\\[-1.8ex]
 \end{tabular}
  \caption{\label{fig:ECDFsingleThree}
- Empirical cumulative distribution function (ECDF) of the restarted algorithm per dimension for all targets of each function as in Fig.~\ref{fig:ECDFsingleOne} but for $f_{37}$ till $f_{55}$.
+ Empirical cumulative distribution function (ECDF) per dimension for all targets of each function as in Fig.~\ref{fig:ECDFsingleOne} but for $f_{37}$ till $f_{55}$.
  }
 \end{figure*}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
- 
-% Table showing the average running time (aRT in number of function
-% evaluations) to reach the given targets for functions $f_1$--$f_{55}$.
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{table*}
-\centering {\tiny
-\parbox{0.499\textwidth}{\centering
-   {\small 5-D}\\
-   \input{\bbobdatapath\algfolder pptable_05D_noiselessall}}%
-\parbox{0.499\textwidth}{\centering
-   {\small 20-D}\\
-   \input{\bbobdatapath\algfolder pptable_20D_noiselessall}}}%
-\caption[Table of aRTs]{\label{tab:aRTs}\bbobpptablecaption{} 
-%Tea: I would reformulate the caption as follows: 
-%Tea: Average running time (\aRT) to reach the given targets measured in number of 
-%Tea: $f$-evaluations. For each function, the \aRT and in braces, as dispersion measure, the half 
-%Tea: difference between 90\%- and 10\%-tile of bootstrapped run lengths are shown for the 
-%Tea: different target values ($\fopt + \Df$). \#succ is the number of trials that reached 
-%Tea: the final target ($\fopt +10^{-5}$). If the final target was never reached, the median 
-%Tea: number of conducted $f$-evaluations is additionally given in \textit{italics}. 
-}
-\end{table*}
-
-%Tea: Shouldn't the table be placed after Fig. 4?
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -403,6 +360,33 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
  \bbobecdfcaptionallgroups{}
  }
 \end{figure*}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+ 
+% Table showing the average running time (aRT in number of function
+% evaluations) to reach the given targets for functions $f_1$--$f_{55}$.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{table*}
+\centering {\tiny
+\parbox{0.499\textwidth}{\centering
+   {\small 5-D}\\
+   \input{\bbobdatapath\algfolder pptable_05D_noiselessall}}%
+\parbox{0.499\textwidth}{\centering
+   {\small 20-D}\\
+   \input{\bbobdatapath\algfolder pptable_20D_noiselessall}}}%
+\caption[Table of aRTs]{\label{tab:aRTs}\bbobpptablecaption{} 
+%Tea: I would reformulate the caption as follows: 
+%Tea: Average running time (\aRT) to reach the given targets measured in number of 
+%Tea: $f$-evaluations. For each function, the \aRT and in braces, as dispersion measure, the half 
+%Tea: difference between 90\%- and 10\%-tile of bootstrapped run lengths are shown for the 
+%Tea: different target values ($\fopt + \Df$). \#succ is the number of trials that reached 
+%Tea: the final target ($\fopt +10^{-5}$). If the final target was never reached, the median 
+%Tea: number of conducted $f$-evaluations is additionally given in \textit{italics}. 
+}
+\end{table*}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % REFERENCES
@@ -483,7 +467,6 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 }
 \end{figure*}
 
-%Tea: On paper, the red crosses can hardly be seen.
 
 \begin{figure*}
 \begin{tabular}{@{\hspace*{-0.018\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}l@{\hspace*{-0.02\textwidth}}}
