LaTeX table now in landscape format for biobjective template, warnings not fixed though

--- a/code-postprocessing/latex-templates/templateBIOBJarticle.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJarticle.tex
@@ -369,7 +369,7 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{table*}
+\begin{sidewaystable*}
 \centering {\tiny
 \parbox{0.499\textwidth}{\centering
    {\small 5-D}\\
@@ -386,7 +386,7 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 %Tea: the final target ($\fopt +10^{-5}$). If the final target was never reached, the median 
 %Tea: number of conducted $f$-evaluations is additionally given in \textit{italics}. 
 }
-\end{table*}
+\end{sidewaystable*}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % REFERENCES
@@ -498,7 +498,7 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \end{tabular}
 \vspace{-3ex}
  \caption{\label{fig:aRTgraphsTwo}
- \aRT vs.\ dimension as in Fig.~\ref{fig:aRTgraphs} but for $f_{31}$ till $f_{55}$.
+ \aRT{} vs.\ dimension as in Fig.~\ref{fig:aRTgraphs} but for $f_{31}$ till $f_{55}$.
  }
 \end{figure*}
 
