small correction in AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -13,7 +13,7 @@ Contributors to NumBBO/CoCO have been
 - Olaf Mersmann (3)
 - Petr Posik
 - Mike Preuss
-- Raimond Ros (3)
+- Raymond Ros (3)
 - Marc Schoenauer
 - Thanh-Do Tran
 - Heike Trautmann
