bibtex file updated 	modified:   code-postprocessing/latex-templates/bbob.bib

--- a/code-postprocessing/latex-templates/bbob.bib
+++ b/code-postprocessing/latex-templates/bbob.bib
@@ -1,6 +1,34 @@
 % This file was created with JabRef 2.7.2.
 % Encoding: MacRoman
 
+@ARTICLE{hansen2016cocoplat, 
+  author = {Hansen, N. and Auger, A. and Mersmann, O. and Tusar, T. 
+             and Brockhoff, D.},
+  title = {{COCO}: A Platform for Comparing Continuous Optimizers in a 
+             Black-Box Setting},
+  journal = {ArXiv e-prints},
+  volume = {arXiv:1603.08785},
+  year = 2016
+}
+
+@article{biobj2016exp,
+  Author = {Hansen, N. and Tusar, T. and Mersmann, O. and Auger, A. and 
+            Brockhoff, D.},
+  Title = {{COCO}: The Experimental Procedure},
+  journal = {ArXiv e-prints},
+  volume = {arXiv:1603.08776},
+  year = 2016
+}
+
+@article{biobj2016func,
+  Author = {Tusar, T. and Brockhoff, D. and Hansen, N. and Auger, A.},
+  Title = {{COCO}: The Bi-objective Black-Box Optimization Benchmarking 
+           (bbob-biobj) Test Suite},
+  journal = {ArXiv e-prints},
+  volume = {arXiv:160x.xxxxx},
+  year = 2016
+}
+
 @INPROCEEDINGS{DBLP:conf/gecco/Auger09,
   author = {Anne Auger},
   title = {Benchmarking the (1+1) evolution strategy with one-fifth success
