bibtex special character treatment added 	modified:   code-postprocessing/latex-templates/bbob.bib

--- a/code-postprocessing/latex-templates/bbob.bib
+++ b/code-postprocessing/latex-templates/bbob.bib
@@ -2,7 +2,7 @@
 % Encoding: MacRoman
 
 @ARTICLE{hansen2016cocoplat, 
-  author = {Hansen, N. and Auger, A. and Mersmann, O. and Tusar, T. 
+  author = {Hansen, N. and Auger, A. and Mersmann, O. and Tu{\v s}ar, T. 
              and Brockhoff, D.},
   title = {{COCO}: A Platform for Comparing Continuous Optimizers in a 
              Black-Box Setting},
@@ -12,7 +12,7 @@
 }
 
 @article{biobj2016exp,
-  Author = {Hansen, N. and Tusar, T. and Mersmann, O. and Auger, A. and 
+  Author = {Hansen, N. and Tu{\v s}ar, T. and Mersmann, O. and Auger, A. and 
             Brockhoff, D.},
   Title = {{COCO}: The Experimental Procedure},
   journal = {ArXiv e-prints},
@@ -21,7 +21,7 @@
 }
 
 @article{biobj2016func,
-  Author = {Tusar, T. and Brockhoff, D. and Hansen, N. and Auger, A.},
+  Author = {Tu{\v s}ar, T. and Brockhoff, D. and Hansen, N. and Auger, A.},
   Title = {{COCO}: The Bi-objective Black-Box Optimization Benchmarking 
            (bbob-biobj) Test Suite},
   journal = {ArXiv e-prints},
