minor update in BibTeX entry

--- a/code-postprocessing/latex-templates/bbob.bib
+++ b/code-postprocessing/latex-templates/bbob.bib
@@ -25,7 +25,7 @@
   Title = {{COCO}: The Bi-objective Black-Box Optimization Benchmarking 
            (bbob-biobj) Test Suite},
   journal = {ArXiv e-prints},
-  volume = {arXiv:160x.xxxxx},
+  volume = {arXiv:1604.00359},
   year = 2016
 }
 
