updated sig-alternate class for LaTeX templates to newest ACM version, added sentence about COCO version to all LaTeX templates

--- a/code-postprocessing/latex-templates/templateBBOBarticle.tex
+++ b/code-postprocessing/latex-templates/templateBBOBarticle.tex
@@ -223,7 +223,7 @@ In order to evaluate the CPU timing of the algorithm, we have run the \change{MY
 Results of \algname\ from experiments according to \cite{hansen2012exp} on the benchmark
 functions given in \cite{wp200901_2010,hansen2012fun} are presented in
 Figures~\ref{fig:ERTgraphs}, \ref{fig:RLDs}, \ref{tab:ERTloss}, and \ref{fig:ERTlogloss} and in
-Tables~\ref{tab:ERTs}.
+Tables~\ref{tab:ERTs}. The experiments were performed with COCO \cite{HAN2016co}, version \change{1.0.1}, the plots were produced with version \change{1.0.4}.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
