--- a/code-postprocessing/latex-templates/templateBIOBJarticle.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJarticle.tex
@@ -228,7 +228,7 @@ In order to evaluate the CPU timing of the algorithm, we have run the \change{\a
 Results of \algname\ from experiments according to \cite{biobj2016exp} on the benchmark
 functions given in \cite{biobj2016func} are presented in
 Figures~\ref{fig:ECDFsingleOne}, \ref{fig:ECDFsingleTwo}, \ref{fig:ECDFsingleThree}, and \ref{fig:ECDFsGroups}, and in
-Table~\ref{tab:aRTs}.
+Table~\ref{tab:aRTs}. The experiments were performed with COCO \cite{HAN2016co}, version \change{1.0.1}, the plots were produced with version \change{1.0.4}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
