--- a/code-postprocessing/latex-templates/templateBBOBmany.tex
+++ b/code-postprocessing/latex-templates/templateBBOBmany.tex
@@ -242,8 +242,11 @@ In order to evaluate the CPU timing of the algorithm, we have run the \change{MY
 Results from experiments according to \cite{hansen2012exp} on the
 benchmark functions given in \cite{wp200901_2010,hansen2012fun} are
 presented in Figures~\ref{fig:scaling}, \ref{fig:ECDFs05D} and
-\ref{fig:ECDFs20D} and in Tables~\ref{tab:ERTs5} and~\ref{tab:ERTs20}. The
-\textbf{expected running time (ERT)}, used in the figures and tables,
+\ref{fig:ECDFs20D} and in Tables~\ref{tab:ERTs5} and~\ref{tab:ERTs20}.
+The experiments were performed with COCO \cite{HAN2016co}, version
+\change{1.0.1}, the plots were produced with version \change{1.0.4}.
+
+The \textbf{expected running time (ERT)}, used in the figures and tables,
 depends on a given target function value, $\ftarget=\fopt+\Df$, and is
 computed over all relevant trials as the number of function
 evaluations executed during each trial while the best function value
