update of BibTeX entry with the missing two documents, update of the paragraphs citing those works

--- a/code-postprocessing/latex-templates/bbob.bib
+++ b/code-postprocessing/latex-templates/bbob.bib
@@ -1,6 +1,24 @@
 % This file was created with JabRef 2.7.2.
 % Encoding: MacRoman
 
+@ARTICLE{hansen2016perfass, 
+  author = {Hansen, N. and Auger, A and Brockhoff, D. and Tu{\v s}ar, D.
+	           and Tu{\v s}ar, T.},
+  title = {{COCO}: Performance Assessment},
+  journal = {ArXiv e-prints},
+  volume = {arXiv:1605.XXXXX},
+  year = 2016
+}
+
+@ARTICLE{biobj2016perfass, 
+  author = {Brockhoff, D. and Tu{\v s}ar, T. and Tu{\v s}ar, D. and
+             Wagner, T. and Hansen, N. and Auger, A.},
+  title = {Biobjective Performance Assessment with the {COCO} Platform},
+  journal = {ArXiv e-prints},
+  volume = {arXiv:1605.01746},
+  year = 2016
+}
+
 @ARTICLE{hansen2016cocoplat, 
   author = {Hansen, N. and Auger, A. and Mersmann, O. and Tu{\v s}ar, T. 
              and Brockhoff, D.},
