changed comments on top of LaTeX files according to new ACM style used, outcommented not mandatory ACM classifications, added links to the new documentation also for the single-objective templates

--- a/code-postprocessing/latex-templates/bbob.bib
+++ b/code-postprocessing/latex-templates/bbob.bib
@@ -29,7 +29,7 @@
   year = 2016
 }
 
-@article{biobj2016exp,
+@article{hansen2016exp,
   Author = {Hansen, N. and Tu{\v s}ar, T. and Mersmann, O. and Auger, A. and 
             Brockhoff, D.},
   Title = {{COCO}: The Experimental Procedure},
