--- a/code-postprocessing/latex-templates/templateBIOBJarticle.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJarticle.tex
@@ -1,8 +1,32 @@
-% This is based on "sig-alternate.tex" V2.0 May 2012
+% This is "sig-alternate.tex" V2.1 April 2013
 % This file should be compiled with V2.5 of "sig-alternate.cls" May 2012
 %
-% ----------------------------------------------------------------------------------------------------------------
+% This example file demonstrates the use of the 'sig-alternate.cls'
+% V2.5 LaTeX2e document class file. It is for those submitting
+% articles to ACM Conference Proceedings WHO DO NOT WISH TO
+% STRICTLY ADHERE TO THE SIGS (PUBS-BOARD-ENDORSED) STYLE.
+% The 'sig-alternate.cls' file will produce a similar-looking,
+% albeit, 'tighter' paper resulting in, invariably, fewer pages.
 %
+% ----------------------------------------------------------------------------------------------------------------
+% This .tex file (and associated .cls V2.5) produces:
+%       1) The Permission Statement
+%       2) The Conference (location) Info information
+%       3) The Copyright Line with ACM data
+%       4) NO page numbers
+%
+% as against the acm_proc_article-sp.cls file which
+% DOES NOT produce 1) thru' 3) above.
+%
+% Using 'sig-alternate.cls' you have control, however, from within
+% the source .tex file, over both the CopyrightYear
+% (defaulted to 200X) and the ACM Copyright Data
+% (defaulted to X-XXXXX-XX-X/XX/XX).
+% e.g.
+% \CopyrightYear{2007} will cause 2007 to appear in the copyright line.
+% \crdata{0-12345-67-8/90/12} will cause 0-12345-67-8/90/12 to appear in the copyright line.
+%
+% ---------------------------------------------------------------------------------------------------------------
 % This .tex source is an example which *does* use
 % the .bib file (from which the .bbl file % is produced).
 % REMEMBER HOWEVER: After having produced the .bbl file,
@@ -10,20 +34,18 @@
 % your .bbl file into your source .tex file so as to provide
 % ONE 'self-contained' source file.
 %
-% Information on the sig-alternate class file and on the
-% GECCO workshop paper format and submission can be found at these
-% locations:
-% http://www.acm.org/sigs/publications/proceedings-templates#aL2
-% http://www.sheridanprinting.com/typedept/gecco3.htm
-%
 % ================= IF YOU HAVE QUESTIONS =======================
 % Questions regarding the SIGS styles, SIGS policies and
 % procedures, Conferences etc. should be sent to
 % Adrienne Griscti (griscti@acm.org)
 %
-% Technical questions to bbob@lri.fr
+% Technical questions _only_ to
+% Gerald Murray (murray@hq.acm.org)
+%
+% Technical questions related to COCO/BBOB to bbob@lri.fr
 % ===============================================================
 %
+% For tracking purposes - this is V2.0 - May 2012
 
 \documentclass{sig-alternate}
 
@@ -197,10 +219,10 @@ Forename Name\\ %\titlenote{Dr.~Trovato insisted his name be first.}\\
 to be written
 \end{abstract}
 
-% Add any ACM category that you feel is needed
-\category{G.1.6}{Numerical Analysis}{Optimization}[global optimization,
-unconstrained optimization]
-\category{F.2.1}{Analysis of Algorithms and Problem Complexity}{Numerical Algorithms and Problems}
+% Add any ACM category that you feel is needed, not mandatory anymore
+%\category{G.1.6}{Numerical Analysis}{Optimization}[global optimization,
+%unconstrained optimization]
+%\category{F.2.1}{Analysis of Algorithms and Problem Complexity}{Numerical Algorithms and Problems}
 
 % Complete with anything that is needed
 \terms{Algorithms}
@@ -225,7 +247,7 @@ In order to evaluate the CPU timing of the algorithm, we have run the \change{\a
 \section{Results}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Results of \algname\ from experiments according to \cite{biobj2016exp} and \cite{biobj2016perfass} on the benchmark
+Results of \algname\ from experiments according to \cite{hansen2016exp}, \cite{hansen2016perfass} and \cite{biobj2016perfass} on the benchmark
 functions given in \cite{biobj2016func} are presented in
 Figures~\ref{fig:ECDFsingleOne}, \ref{fig:ECDFsingleTwo}, \ref{fig:ECDFsingleThree}, and \ref{fig:ECDFsGroups}, and in
 Table~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016cocoplat}, version \change{1.0.1}, the plots were produced with version \change{1.0.4}.
