fixed Niko's name in BibTeX again (sorry)

--- a/code-postprocessing/latex-templates/bbob.bib
+++ b/code-postprocessing/latex-templates/bbob.bib
@@ -20,7 +20,7 @@
 }
 
 @ARTICLE{hansen2016cocoplat, 
-  author = {Hnsen, N. and Auger, A. and Mersmann, O. and Tu{\v s}ar, T. 
+  author = {Hansen, N. and Auger, A. and Mersmann, O. and Tu{\v s}ar, T. 
              and Brockhoff, D.},
   title = {{COCO}: A Platform for Comparing Continuous Optimizers in a 
              Black-Box Setting},
