reverted change with hyperref package, but kept the code for a later inclusion once we fixed the corresponding issue

--- a/code-postprocessing/latex-templates/bbob.bib
+++ b/code-postprocessing/latex-templates/bbob.bib
@@ -6,7 +6,8 @@
 	           and Tu{\v s}ar, T.},
   title = {{COCO}: Performance Assessment},
   journal = {ArXiv e-prints},
-  volume = {\href{https://arxiv.org/abs/1605.XXXX}{arXiv:1605.XXXXX}},
+  CLICKvolume = {\href{https://arxiv.org/abs/1605.XXXX}{arXiv:1605.XXXXX}},
+	volume = {arXiv:1605.XXXXX},
   year = 2016
 }
 
@@ -15,7 +16,8 @@
              Wagner, T. and Hansen, N. and Auger, A.},
   title = {Biobjective Performance Assessment with the {COCO} Platform},
   journal = {ArXiv e-prints},
-  volume = {\href{https://arxiv.org/abs/1605.01746}{arXiv:1605.01746}},
+	CLICKvolume = {\href{https://arxiv.org/abs/1605.01746}{arXiv:1605.01746}},
+  volume = {arXiv:1605.01746},
   year = 2016
 }
 
@@ -25,7 +27,8 @@
   title = {{COCO}: A Platform for Comparing Continuous Optimizers in a 
              Black-Box Setting},
   journal = {ArXiv e-prints},
-  volume = {\href{https://arxiv.org/abs/1603.08785}{arXiv:1603.08785}},
+	CLICKvolume = {\href{https://arxiv.org/abs/1603.08785}{arXiv:1603.08785}},
+  volume = {arXiv:1603.08785},
   year = 2016
 }
 
@@ -34,7 +37,8 @@
             Brockhoff, D.},
   Title = {{COCO}: The Experimental Procedure},
   journal = {ArXiv e-prints},
-  volume = {\href{https://arxiv.org/abs/1603.08776}{arXiv:1603.08776}},
+	CLICKvolume = {\href{https://arxiv.org/abs/1603.08776}{arXiv:1603.08776}},
+  volume = {arXiv:1603.08776},
   year = 2016
 }
 
@@ -43,7 +47,8 @@
   Title = {{COCO}: The Bi-objective Black-Box Optimization Benchmarking 
            (bbob-biobj) Test Suite},
   journal = {ArXiv e-prints},
-  volume = {\href{https://arxiv.org/abs/1604.00359}{arXiv:1604.00359}},
+	CLICKvolume = {\href{https://arxiv.org/abs/1604.00359}{arXiv:1604.00359}},
+  volume = {arXiv:1604.00359},
   year = 2016
 }
 
