--- a/code-postprocessing/latex-templates/templateBBOBarticle.tex
+++ b/code-postprocessing/latex-templates/templateBBOBarticle.tex
@@ -52,7 +52,9 @@
 \usepackage{graphicx}
 \usepackage{rotating}
 \usepackage[dvipsnames]{xcolor}  % color is sufficient
-\usepackage[hidelinks]{hyperref} % make COCO papers clickable
+%\usepackage[hidelinks]{hyperref} % make COCO papers clickable
+
+
 \pdfpagewidth=8.5in
 \pdfpageheight=11in
 \special{papersize=8.5in,11in}
