corrected wrong caption in many-algorithm template about Bonferroni correction (issue #980)

--- a/code-postprocessing/latex-templates/templateBBOBmany.tex
+++ b/code-postprocessing/latex-templates/templateBBOBmany.tex
@@ -462,7 +462,7 @@ ill-conditioned fcts & multi-modal fcts \\
 \end{minipage}}
 
  \caption{\label{tab:ERTs5}
- \bbobpptablesmanylegend{dimension $5$}
+ \bbobpptablesmanylegend{dimension $5$}{110} % Bonferroni correction: #dimensions * #functions
  }
 \end{table*}
 
@@ -531,7 +531,7 @@ ill-conditioned fcts & multi-modal fcts \\
 \input{\bbobdatapath pptables_f024_20D}
 \end{minipage}}
  \caption{\label{tab:ERTs20}
-  \bbobpptablesmanylegend{dimension $20$}
+  \bbobpptablesmanylegend{dimension $20$}{110} % Bonferroni correction: #dimensions * #functions
 }
 \end{table*}
 
