updated tables in multi-algo bbob-biobj template, corrected bug introduced in previous commit in the same file

--- a/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
@@ -254,7 +254,7 @@ to be written
 \section{CPU Timing}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % note that the following text is just a proposal and can/should be changed to your needs:
-In order to evaluate the CPU timing of the algorithm, we have run the \change{\algname} with restarts on the entire bbob-biobj test suite \cite{biobj2016func} for $2 D$ function evaluations. The \change{C/Java/Matlab/Octave/Python} code was run on a \change{Mac Intel(R) Core(TM) i5-2400S CPU @ 2.50GHz} with \change{1} processor and \change{4} cores. The time per function evaluation for dimensions 2, 3, 5, 10, 20\change{, 40} equals \change{$x.x$}, \change{$x.x$}, \change{$x.x$}, \change{$xx$}, \change{$xxx$}\change{, and $xxx$} seconds respectively. 
+In order to evaluate the CPU timing of the algorithm, we have run the \change{\algorithmA} with restarts on the entire bbob-biobj test suite \cite{biobj2016func} for $2 D$ function evaluations. The \change{C/Java/Matlab/Octave/Python} code was run on a \change{Mac Intel(R) Core(TM) i5-2400S CPU @ 2.50GHz} with \change{1} processor and \change{4} cores. The time per function evaluation for dimensions 2, 3, 5, 10, 20\change{, 40} equals \change{$x.x$}, \change{$x.x$}, \change{$x.x$}, \change{$xx$}, \change{$xxx$}\change{, and $xxx$} seconds respectively. 
 
 \change{repeat the above for any algorithm tested}
 
@@ -453,8 +453,8 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{table*}\tiny
-%\hfill5-D\hfill~\\[1ex]
-\mbox{\begin{minipage}[t]{0.331\textwidth}\tiny
+\centering
+\mbox{\begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
 \input{\bbobdatapath pptables_f001_05D} 
 
@@ -496,7 +496,7 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 \end{minipage}
 \hspace{0.002\textwidth}
-\begin{minipage}[t]{0.331\textwidth}\tiny
+\begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
 
 \input{\bbobdatapath pptables_f020_05D}
@@ -538,7 +538,7 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \end{minipage}
 
 \hspace{0.002\textwidth}
-\begin{minipage}[t]{0.331\textwidth}\tiny
+\begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
 
 \input{\bbobdatapath pptables_f038_05D}
@@ -594,8 +594,8 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{table*}\tiny
-%\hfill5-D\hfill~\\[1ex]
-\mbox{\begin{minipage}[t]{0.331\textwidth}\tiny
+\centering
+\mbox{\begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
 \input{\bbobdatapath pptables_f001_20D} 
 
@@ -637,7 +637,7 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 \end{minipage}
 \hspace{0.002\textwidth}
-\begin{minipage}[t]{0.331\textwidth}\tiny
+\begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
 
 \input{\bbobdatapath pptables_f020_20D}
@@ -679,7 +679,7 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \end{minipage}
 
 \hspace{0.002\textwidth}
-\begin{minipage}[t]{0.331\textwidth}\tiny
+\begin{minipage}[t]{0.32\textwidth}\tiny
 \centering
 
 \input{\bbobdatapath pptables_f038_20D}
