--- a/code-postprocessing/latex-templates/templateBBOBarticle.tex
+++ b/code-postprocessing/latex-templates/templateBBOBarticle.tex
@@ -247,14 +247,14 @@ In order to evaluate the CPU timing of the algorithm, we have run the \change{MY
 
 Results of \algname\ from experiments according to \cite{hansen2016exp} and \cite{hansen2016perfass} on the benchmark
 functions given in \cite{wp200901_2010,hansen2012fun} are presented in
-Figures~\ref{fig:ERTgraphs}, \ref{fig:RLDs}, \ref{tab:ERTloss}, and \ref{fig:ERTlogloss} and in
-Tables~\ref{tab:ERTs}. The experiments were performed with COCO \cite{hansen2016cocoplat}, version \change{1.0.1}, the plots were produced with version \change{1.0.4}.
+Figures~\ref{fig:aRTgraphs}, \ref{fig:RLDs}, \ref{tab:aRTloss}, and \ref{fig:aRTlogloss} and in
+Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016cocoplat}, version \change{1.0.1}, the plots were produced with version \change{1.0.4}.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% Scaling of ERT with dimension
+% Scaling of aRT with dimension
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}
@@ -285,7 +285,7 @@ Tables~\ref{tab:ERTs}. The experiments were performed with COCO \cite{hansen2016
 \includegraphics[width=0.268\textwidth]{ppfigdim_f024}
 \end{tabular}
 \vspace{-3ex}
- \caption{\label{fig:ERTgraphs}
+ \caption{\label{fig:aRTgraphs}
  \bbobppfigdimlegend{$f_1$ and $f_{24}$}
  }
 \end{figure*}
@@ -293,8 +293,8 @@ Tables~\ref{tab:ERTs}. The experiments were performed with COCO \cite{hansen2016
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  
-% Table showing the expected running time (ERT in number of function
-% evaluations) divided by the best ERT measured during BBOB-2009 (given in the
+% Table showing the average runtime (aRT in number of function
+% evaluations) divided by the best aRT measured during BBOB-2009 (given in the
 % first row of each cell) for functions $f_1$--$f_{24}$.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -307,7 +307,7 @@ Tables~\ref{tab:ERTs}. The experiments were performed with COCO \cite{hansen2016
 \parbox{0.499\textwidth}{\centering
    {\small 20-D}\\
    \input{\bbobdatapath\algfolder pptable_20D_noiselessall}}}%
-\caption[Table of ERTs]{\label{tab:ERTs}\bbobpptablecaption{} 
+\caption[Table of aRTs]{\label{tab:aRTs}\bbobpptablecaption{} 
 }
 \end{table*}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -369,7 +369,7 @@ Tables~\ref{tab:ERTs}. The experiments were performed with COCO \cite{hansen2016
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% ERT loss ratios (figure and table)
+% aRT loss ratios (figure and table)
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
@@ -382,7 +382,7 @@ Tables~\ref{tab:ERTs}. The experiments were performed with COCO \cite{hansen2016
 %
 \input{\bbobdatapath\algfolder pploglosstable_05D_noiselessall}\\
 \input{\bbobdatapath\algfolder pploglosstable_20D_noiselessall}
-\caption{\label{tab:ERTloss}%
+\caption{\label{tab:aRTloss}%
 \bbobloglosstablecaption{}
 }
 \end{figure}
@@ -391,7 +391,7 @@ Tables~\ref{tab:ERTs}. The experiments were performed with COCO \cite{hansen2016
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% ERT loss ratios per function group
+% aRT loss ratios per function group
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
@@ -421,7 +421,7 @@ Tables~\ref{tab:ERTs}. The experiments were performed with COCO \cite{hansen2016
 \includegraphics[width=0.24\textwidth,trim=7mm 0 9mm 12mm, clip]{pplogloss_20D_mult2}
 \vspace*{-0.5ex}
 \end{tabular}
- \caption{\label{fig:ERTlogloss}%
+ \caption{\label{fig:aRTlogloss}%
 \bbobloglossfigurecaption{}
 }
 \end{figure}
