minor correction in latest LaTeX template

--- a/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
@@ -270,7 +270,8 @@ Figures~\ref{ECDFsingleOne}, \ref{ECDFsingleTwo}, \ref{fig:ECDFs05D} and
 The experiments were performed with COCO \cite{hansen2016cocoplat}, version
 \change{1.0.1}, the plots were produced with version \change{1.1.1}.
 
-The \textbf{average runtime (aRT)}, used in the figures and tables,
+The \textbf{average runtime (aRT)}, used in the %figures and
+tables,
 depends on a given quality indicator value, $\Itarget=\hvref+\DI$, and is
 computed over all relevant trials as the number of function
 evaluations executed during each trial while the best function value
