added missing keyword to many-algo bbob-biobj template

--- a/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
@@ -241,7 +241,7 @@ to be written
 \terms{Algorithms}
 
 % Complete with anything that is needed
-\keywords{Benchmarking, Black-box optimization}
+\keywords{Benchmarking, Black-box optimization, Bi-objective optimization}
 
 % \section{Introduction}
 %
