--- a/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
@@ -274,7 +274,7 @@ The \textbf{average runtime (aRT)}, used in the %figures and
 tables,
 depends on a given quality indicator value, $\Itarget=\hvref+\DI$, and is
 computed over all relevant trials as the number of function
-evaluations executed during each trial while the best function value
+evaluations executed during each trial while the best indicator value
 did not reach \Itarget, summed over all trials and divided by the
 number of trials that actually reached \Itarget\
 \cite{hansen2016exp,price1997dev}.  \textbf{Statistical significance}
